hide overflow and fixed

--- a/css/body.css
+++ b/css/body.css
@@ -23,6 +23,11 @@ body {
                                   supported by Chrome and Opera */
 }
 
+#container {
+  overflow: hidden;
+  position: relative;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
